# rjest

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  install.sh  specs.md  specs1.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: run.sh
crates/jestd/: Cargo.toml
crates/jestd/src/: git.rs  main.rs  metrics.rs  server.rs
crates/jestd/src/config/: mod.rs
crates/jestd/src/discovery/: mod.rs
crates/jestd/src/rjest_util/: mod.rs
crates/jestd/src/transform/: mod.rs
crates/jestd/src/watch/: mod.rs
crates/jestd/src/worker/: mod.rs
crates/jestd/tests/: daemon_startup.rs  mod.rs  run_request.rs  watch_session.rs
crates/jestd/tests/fixtures/minimal-project/: failing.test.js  package.json  simple.test.js
crates/rjest-bench/: Cargo.toml
crates/rjest-bench/benches/: discovery.rs  transform.rs
crates/rjest-bench/src/: lib.rs
crates/rjest-cli/: Cargo.toml
crates/rjest-cli/src/: args.rs  client.rs  daemon.rs  main.rs  output.rs
crates/rjest-protocol/: Cargo.toml
crates/rjest-protocol/src/: lib.rs
crates/rjest-runtime/: package.json
crates/rjest-runtime/src/: load-config.js  worker.js
docker/: Dockerfile.macos-aarch64  Dockerfile.macos-x86_64  Dockerfile.osxcross  README.md
docker/cmake-toolchains/: macos-aarch64.cmake  macos-x86_64.cmake
docs/: architecture.md  build-plan.md  compatibility.md  performance.md  roadmap.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/advanced/: architecture.md  performance.md  troubleshooting.md
documentation/docs/getting-started/: installation.md  migration.md  quick-start.md
documentation/docs/guides/: async.md  matchers.md  mocks.md  snapshots.md  writing-tests.md
documentation/docs/reference/: cli.md  configuration.md  globals.md
scripts/: build-macos-images.sh  release.sh
tests/: benchmark.sh  compatibility.sh
tests/fixtures/basic-js/: package.json
tests/fixtures/basic-js/src/: math.test.js
tests/fixtures/basic-ts/: jest.config.js  package-lock.json  package.json
tests/fixtures/basic-ts/src/: fuzzy.test.ts  snapshot.test.ts  utils.test.ts  utils.ts
tests/fixtures/basic-ts/src/__snapshots__/: snapshot.test.ts.snap
tests/fixtures/large-suite/: jest.config.js  package-lock.json  package.json
tests/fixtures/large-suite/src/: module1.test.ts  module10.test.ts  module11.test.ts  module12.test.ts  module13.test.ts  module14.test.ts  module15.test.ts  module16.test.ts  module17.test.ts  module18.test.ts  module19.test.ts  module2.test.ts  module20.test.ts  module21.test.ts  module22.test.ts  module23.test.ts  module24.test.ts  module25.test.ts  module26.test.ts  module27.test.ts  module28.test.ts  module29.test.ts  module3.test.ts  module30.test.ts  module31.test.ts  module32.test.ts  module33.test.ts  module34.test.ts  module35.test.ts  module36.test.ts  module37.test.ts  module38.test.ts  module39.test.ts  module4.test.ts  module40.test.ts  module41.test.ts  module42.test.ts  module43.test.ts  module44.test.ts  module45.test.ts  (+10 more)
tests/fixtures/monorepo/: jest.config.js
