[workspace]
resolver = "2"
members = [
    "crates/jestd",
    "crates/rjest-cli",
    "crates/rjest-protocol",
    "crates/rjest-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/neul-labs/rjest"
documentation = "https://docs.neullabs.com/rjest"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# IPC - using nng for low-latency messaging
nng = "1"

# Persistent caching
sled = "0.34"

# SWC for TypeScript/JSX transforms (compatible versions)
swc_common = "18.0"
swc_ecma_ast = "19.0"
swc_ecma_parser = "30.0"
swc_ecma_codegen = "21.0"
swc_ecma_transforms_base = "33.0"
swc_ecma_transforms_typescript = "36.0"
swc_ecma_transforms_module = "36.0"
swc_ecma_visit = "19.0"

# Serialization (pinned for SWC compatibility)
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing for cache keys
blake3 = "1"

# File watching
notify = "6"

# Globbing for test discovery
glob = "0.3"

# Parallel processing
rayon = "1.10"

# In-memory caching
lru = "0.12"

# Internal crates
rjest-protocol = { version = "0.1.0", path = "crates/rjest-protocol" }
