[package]
name = "jestd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Jest-compatible test runner daemon"

[[bin]]
name = "jestd"
path = "src/main.rs"

[dependencies]
rjest-protocol = { workspace = true }
tokio = { workspace = true }
nng = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
notify = { workspace = true }
glob = { workspace = true }
regex = "1"
walkdir = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
rayon = { workspace = true }
lru = { workspace = true }
lazy_static = "1.4"
libc = "0.2"
tempfile = "3"

# SWC for native TypeScript/JSX transforms
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_transforms_base = { workspace = true }
swc_ecma_transforms_typescript = { workspace = true }
swc_ecma_transforms_module = { workspace = true }
swc_ecma_visit = { workspace = true }
