[package]
name = "rjest-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "discovery"
harness = false

[dependencies]
rjest-protocol = { path = "../rjest-protocol" }
anyhow = "1.0"
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
