[package]
name = "rjest-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "A blazing-fast, drop-in replacement for Jest — command-line interface."
keywords = ["jest", "testing", "test-runner", "javascript", "typescript"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "jest"
path = "src/main.rs"

[dependencies]
rjest-protocol = { workspace = true }
tokio = { workspace = true }
nng = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3"
