[package]
name = "rjest-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Shared RPC protocol types for rjest"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
